[metadata]
name = clarinet
version = 0.0.1
description = A functional implementation of probabilistic network models!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/phinate/clarinet
author = Nathan Simpson
author_email = email.nsimpson@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
install_requires =
    jax
    jaxlib
    pydantic
    immutables
python_requires = >=3.9

[options.packages.find]
exclude = tests*

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-tests.*]
disallow_untyped_defs = false

[coverage:run]
plugins = covdefaults
