[metadata]
name = clarinet
description = A jax-powered wrapper for probabilistic graphical model computations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/phinate/clarinet
author = Nathan Simpson
author_email = phinate@protonmail.com
maintainer = Nathan Simpson
maintainer_email = phinate@protonmail.com
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Plajjjjjjjjjnning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://clarinet.readthedocs.io/
    Bug Tracker = https://github.com/phinate/clarinet/issues
    Discussions = https://github.com/phinate/clarinet/discussions
    Changelog = https://github.com/phinate/clarinet/releases

[options]
packages = find:
install_requires =
    immutables
    numpy>=1.13.3
    pydantic
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pre-commit
    pytest>=6
    pytest-cov
docs =
    Sphinx~=3.0
    myst_parser>=0.13
    sphinx-book-theme>=0.0.33
    sphinx_copybutton
test =
    pre-commit
    pytest>=6
    pytest-cov

[flake8]
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T

[mypy]
plugins = pydantic.mypy

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True
